--- a/index.html
+++ b/index.html
@@ -27,31 +27,25 @@
         <div class="section-2">
             <h2>About</h2>
             <p>
-                As a recent graduate from Towson University with a degree in Computer Science, specializing in Software Engineering.
-                I have a strong interest in mobile, web, desktop application development and game development.
-                Throughout my studies, I have developed numerous projects, consistently applying and enhancing the skills I’ve gained.
-                My hands-on experience in various programming languages and development environments has equipped me with a solid foundation to tackle real-world challenges in software development.
+                I am a high school student currently enrolled in Washington-Liberty High School. 
             </p>
             <h2>Courses Taken</h2>
             <ul class="book">
-                <li>COSC 412: Software Engineering</li>
-                <li>COSC 484: Web Based Programmig</li>
-                <li>COSC 442: Software Quality Assurance and Testing</li>
-                <li>COSC 457: Database Management Systems</li>
-                <li>COSC 350: Data Communications and Networking</li>
-                <li>COSC 336: Data Structures and Algorithm Analysis</li>                                                
-                <li>COSC 455: Programming Languages: Design and Implementation</li>                                
-                <li>COSC 435: Mobile Application Development</li>
-                <li>COSC 436: Object Oriented Design</li>
-                <li>COSC 439: Operating Systems</li>                                
-                <li>COSC 490: Software Project Practicuum</li>
+                <li>COSC IB SL Aplications & Analysis </li>
+                <li>COSC AP Computer Science Priciples</li>
+                <li>COSC AP European History</li>
+                <li>COSC Intesified English 9 & 10</li>
+                <li>COSC Intesified Biology and Chemistry</li>
+                <li>COSC Spanish 1,2 & 3</li>                                                
+                <li>COSC Advanced Band & Marching Band</li>                                
+                <li>COSC Intesified World History</li>
             </ul>
 
             <h2>Projects</h2>
             <h4>Below are some projects I am currently working on 💻</h4>
             <ul class="phone">
-                <li><u><a href="https://grajoman.vercel.app" class="project">Grajoman</a></u></li>
-                <li><u><a href="https://github.com/BlackHeart32/nonniespizza" class="project">Nonnie's Pizza</a></u>(Group project developed using Django and Bootsrap)</li>
+                <li><u><a (: </li>
+                <li><u><a :) </li>
             </ul>
             
             <h2>Info</h2>
@@ -60,7 +54,7 @@
             </ul>
 
             <h2>Interests</h2>
-            <p>Aside from developing software, I exercise at least 2X a week and sometimes I would go to the minigolf course (Still a beginner). Ask me about my baseball experience in the Dominican Republic.<u><a href="https://en.wikipedia.org/wiki/List_of_Major_League_Baseball_players_from_the_Dominican_Republic">Dominican Baseball.</a></u></p>
+            <p>I like Sports </p>
         </div>
     </div>
 </body>
